--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -8,6 +8,7 @@ import Features from "../../components/landing/Features.astro";
 import SmartScheduling from "../../components/landing/SmartScheduling.astro";
 import NotificationModes from "../../components/landing/NotificationModes.astro";
 import DeepFeatures from "../../components/landing/DeepFeatures.astro";
+import WidgetsDisplay from "../../components/landing/WidgetsDisplay.astro";
 import Benefits from "../../components/landing/Benefits.astro";
 import Languages from "../../components/landing/Languages.astro";
 import Gallery from "../../components/landing/Gallery.astro";
@@ -58,6 +59,7 @@ const t = useTranslations(currentLang);
 		<SmartScheduling lang={currentLang} />
 		<NotificationModes lang={currentLang} />
 		<DeepFeatures lang={currentLang} />
+		<WidgetsDisplay lang={currentLang} />
 		<Benefits lang={currentLang} />
 		<Languages lang={currentLang} />
 		<Gallery lang={currentLang} />
