--- a/src/components/landing/Languages.astro
+++ b/src/components/landing/Languages.astro
@@ -30,7 +30,7 @@ const allLanguages = [
 
 <section
     id="languages"
-    class="py-20 relative overflow-hidden bg-white dark:bg-black border-y border-gray-100 dark:border-gray-900"
+    class="py-20 relative overflow-hidden bg-gray-50 dark:bg-black border-y border-gray-100 dark:border-gray-900"
 >
     <div class="container mx-auto px-6 relative z-10">
         <div class="flex flex-col lg:flex-row items-center gap-12">
