feat: Adjust mockup sizing, scaling, and layout for responsiveness across DeepFeatures, NotificationModes, and SmartScheduling components.

--- a/src/components/landing/DeepFeatures.astro
+++ b/src/components/landing/DeepFeatures.astro
@@ -93,10 +93,10 @@ const t = useTranslations(lang);
             </div>
 
             <div
-                class="flex-1 order-1 lg:order-2 flex justify-center perspective-[2000px] reveal-scale stagger-2"
+                class="flex-1 order-1 lg:order-2 flex justify-center perspective-[2000px] reveal-scale stagger-2 w-full h-[550px] lg:h-[650px]"
             >
                 <div
-                    class="relative group h-[500px] w-full max-w-[400px] mockup-stack-container stack-2"
+                    class="relative group h-[672px] w-[310px] mockup-stack-container stack-2 transform scale-[0.8] lg:scale-[0.95] xl:scale-100 origin-top"
                 >
                     <!-- Layer 2: Detail (Tilted Background) -->
                     <div
@@ -136,10 +136,10 @@ const t = useTranslations(lang);
         <!-- 2. Calendar: Month + Week -->
         <div class="flex flex-col lg:flex-row items-center gap-20 mb-40">
             <div
-                class="flex-1 flex justify-center perspective-[2000px] reveal-scale stagger-2"
+                class="flex-1 flex justify-center perspective-[2000px] reveal-scale stagger-2 w-full h-[550px] lg:h-[650px]"
             >
                 <div
-                    class="relative group h-[500px] w-full max-w-[400px] mockup-stack-container stack-2"
+                    class="relative group h-[672px] w-[310px] mockup-stack-container stack-2 transform scale-[0.8] lg:scale-[0.95] xl:scale-100 origin-top"
                 >
                     <!-- Layer 2: Month View (Tilted Background) -->
                     <div
@@ -258,10 +258,10 @@ const t = useTranslations(lang);
             </div>
 
             <div
-                class="flex-1 order-1 lg:order-2 flex justify-center perspective-[2000px] reveal-scale stagger-2"
+                class="flex-1 order-1 lg:order-2 flex justify-center perspective-[2000px] reveal-scale stagger-2 w-full h-[550px] lg:h-[650px]"
             >
                 <div
-                    class="relative group h-[550px] w-full max-w-[450px] mockup-stack-container stack-3"
+                    class="relative group h-[672px] w-[310px] mockup-stack-container stack-3 transform scale-[0.8] lg:scale-[0.95] xl:scale-100 origin-top"
                 >
                     <!-- Layer 3: Wellness (Deep Background) -->
                     <div
